# cnetmod

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MSVC_C1605_Issue.md  README.md  README_zh.md  conanfile.py  vcpkg.json
.claude/: settings.local.json
.github/workflows/: ci.yml  linux-clang.yml  macos-clang.yml  windows-msvc.yml
cmake/: cnetmodConfig.cmake.in
cmake/modules/: nlohmann_json.cppm
cmake/utils/: DetectStdLibModulePaths.cmake  EmbedMappers.cmake  EmbedMappers.md  UseMimalloc.cmake  UseMold.cmake
cmake/vcpkg-triplets/: x64-windows-vs2026.cmake
docs/: README.md  coroutine-bridge.md
docs/en/: README.md  architecture.md  examples.md  getting-started.md  installation.md  modbus.md  mysql_transaction.md
docs/zh/: README.md  architecture.md  examples.md  getting-started.md  installation.md  modbus.md  mysql_transaction.md  raft-design.md
examples/: CMakeLists.txt  README.md  async_file.cpp  channel_demo.cpp  echo_server.cpp  hight_http.cpp  hight_plus_http.cpp  hight_ws.cpp  http2_demo.cpp  http_demo.cpp  modbus_converter_demo.cpp  modbus_demo.cpp  mqtt_demo.cpp  multicore_http.cpp  multicore_ws.cpp  mutex_demo.cpp  mybatis_plus_demo.cpp  mysql_crud.cpp  mysql_orm.cpp  mysql_xml_complex.cpp  mysql_xml_mapper.cpp  redis_client.cpp  redis_pool.cpp  redis_sharded_pool.cpp  serial_port.cpp  ssl_echo_server.cpp  tfb_benchmark.cpp  timer_demo.cpp  transaction_simple_test.cpp  ws_demo.cpp
examples/coap/: coap_interop_client.cpp  coap_interop_server.cpp  coap_multicast_client.cpp  coap_multicast_server.cpp  coaps_interop_client.cpp  coaps_interop_server.cpp
examples/concurrency/: blocking_bridge_demo.cpp  channel_demo.cpp  mutex_demo.cpp  stdexec_bridge.cpp
examples/core/: README.md  async_file.cpp  dtls_echo_client.cpp  dtls_echo_server.cpp  echo_server.cpp  serial_port.cpp  ssl_echo_server.cpp  timer_demo.cpp
examples/database/: README.md  mybatis_plus_demo.cpp  mysql_crud.cpp  mysql_orm.cpp  mysql_transaction.cpp  mysql_xml_complex.cpp  mysql_xml_mapper.cpp  transaction_simple_test.cpp
examples/grpc/: security_interceptor.cpp
examples/http/: README.md  account_server_demo.cpp  client_demo.cpp  cookie_and_chunked_demo.cpp  cookie_demo.cpp  hight_http.cpp  hight_plus_http.cpp  http1_vs_http2_demo.cpp  http2_demo.cpp  http_demo.cpp  multicore_http.cpp  server_cookie_chunked_demo.cpp  tfb_benchmark.cpp  websocket_upgrade_demo.cpp
examples/integration/thirdparty_collision_project/: CMakeLists.txt  main.cpp
examples/mappers/: AiMapper.xml  ClientMapper.xml  ExpenseMapper.xml  FileMapper.xml  ProjectMapper.xml  user_mapper.xml
examples/modbus/: README.md  modbus_converter_demo.cpp  modbus_demo.cpp  modbus_rtu_demo.cpp  modbus_udp_demo.cpp
examples/mqtt/: README.md  mqtt_demo.cpp
examples/raft/: oss_shared_storage.cpp  raft_demo_cluster.hpp  redis_cluster.cpp
examples/redis/: README.md  redis_client.cpp  redis_pool.cpp  redis_sharded_pool.cpp
examples/socks5/: README.md  client_demo.cpp  server_demo.cpp
examples/test_ssl/: cert.pem  key.pem  keystore.p12
examples/websocket/: README.md  hight_ws.cpp  multicore_ws.cpp  ws_demo.cpp
include/cnetmod/: config.hpp  orm.hpp  version.hpp
scripts/: push_current_worktree.sh
src/: cnetmod_utils.cppm  core.cppm  coro.cppm  executor.cppm  io.cppm  main.cpp  utils.cppm
src/core/: address.cppm  address_impl.cpp  buffer.cppm  buffer_impl.cpp  buffer_pool.cppm  buffer_pool_impl.cpp  crash_dump.cppm  crash_dump_impl.cpp  dns.cppm  dns_impl.cpp  dtls.cppm  dtls_impl.cpp  error.cppm  error_impl.cpp  file.cppm  file_impl.cpp  log.cppm  log_config.cppm  log_impl.cpp  net_init.cppm  net_init_impl.cpp  serial_port.cppm  serial_port_impl.cpp  socket.cppm  socket_impl.cpp  ssl.cppm  ssl_impl.cpp
src/coro/: awaitable.cppm  awaitable_impl.cpp  bridge.cppm  cancel.cppm  cancel_impl.cpp  channel.cppm  circuit_breaker.cppm  circuit_breaker_impl.cpp  mutex.cppm  mutex_impl.cpp  retry.cppm  semaphore.cppm  semaphore_impl.cpp  shared_mutex.cppm  shared_mutex_impl.cpp  spawn.cppm  task.cppm  task_impl.cpp  timer.cppm  timer_impl.cpp  wait_group.cppm  wait_group_impl.cpp
src/executor/: async_op.cppm  pool.cppm  scheduler.cpp  scheduler.cppm  server_context_impl.cpp
src/io/: io_context.cppm  io_context_factory.cpp  io_context_impl.cpp  (+1 more)
testing/: CMakeLists.txt  coap_interop.py  coap_multicast_interop.py  coaps_interop.py  dtls_interop.py
testing/bench/: CMakeLists.txt  bench_channel.cpp  bench_coroutine.cpp  bench_framework.hpp  bench_grpc.cpp  bench_http.cpp  bench_io.cpp  bench_mqtt.cpp  bench_raft.cpp  bench_sync.cpp  bench_uring_recv.cpp  bench_ws.cpp
testing/grpc/: echo.proto  grpc_codegen_test.py  grpc_interop_client.cpp  grpc_interop_server.cpp  grpc_proto_interop.py  grpcio_bench.py  grpcio_bench_last.json  grpcio_bench_last.md  grpcio_cross_process_interop.py  grpcio_server_to_cnetmod_client_interop.py  requirements.txt
testing/http2/: h2_client_interop.cpp  h2_interop.py  h2_interop_server.cpp  h2_python_server.py  run_asan.sh  run_interop.sh
testing/mail/: requirements.txt  smtp_bench_server.cpp  smtp_benchmark.py  smtp_interop_client.cpp  smtp_interop_server.cpp  smtp_semantic_interop.py
testing/mqtt/: amqtt_broker_interop.py  mqtt_interop_broker.cpp  mqtt_interop_client.cpp  paho_mqtt_interop.py  paho_mqtt_weaknet.py
testing/tests/: CMakeLists.txt  http_client_test.cpp  test_channel.cpp  test_circuit_breaker.cpp  test_coap.cpp  test_dns.cpp  test_framework.hpp  test_grpc.cpp  test_grpc_proto.cpp  test_http2_hpack.cpp  test_http_ip_filter.cpp  test_http_parser.cpp  test_http_request.cpp  test_http_response.cpp  test_http_router.cpp  test_http_sse.cpp  test_http_swagger.cpp  test_http_types.cpp  test_http_utils.cpp  test_log.cpp  test_mail.cpp  test_metrics.cpp  test_mqtt.cpp  test_mutex.cpp  test_raft.cpp  test_redis.cpp  test_retry.cpp  test_semaphore.cpp  test_shared_mutex.cpp  test_socks5.cpp  test_task.cpp  test_tfb_compliance.cpp  test_wait_group.cpp
testing/tfb/: README.md  benchmark_config.json  cnetmod.dockerfile
tests/: CMakeLists.txt
tools/: grpc_cppm_codegen.py
(+568 files in other folders)
